--- a/main.html
+++ b/main.html
@@ -12,9 +12,15 @@
 			<div class="ryu-still"></div>
 			<div class="ryu-ready"></div>
   			<div class="ryu-throwing"></div>
+  			<div class="ryu-cool"></div>
+		</div>
+		<div class="instructions">
+			<h2>Click & Hold on Ryu to make him throw a hadouken.</h2>
+			<h2>Press and hold down the "x" key to make him strike his cool pose!</h2>
 		</div>
 		<div class="hadouken"></div>
 	</div>
+	<audio id="hadouken-sound" src="sound/hadouken.mp3">
 	<script src="http://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
